# ml-from-scratch

./: .gitignore  README.md  __init__.py  distances.py  knn_classifier.py  knn_regressor.py  linear_regression.py  logistic_regression.py  losses.py  main.py  model.py  pyproject.toml  regularizations.py  requirements.txt  utils.py
ml_lib/: __init__.py
ml_lib/cluster/: __init__.py  kmeans.py
ml_lib/linear/: __init__.py  linear_model.py  linear_regression.py  logistic_regression.py
ml_lib/metrics/: __init__.py  losses.py
ml_lib/model/: model.py
ml_lib/neighbours/: __init__.py  knn_classifier.py  knn_regressor.py
ml_lib/preprocessing/: __init__.py  encoders.py  preprocessor.py  scalers.py
ml_lib/utilities/: __init__.py  activations.py  distances.py  regularizations.py
