[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ml_from_scratch"
version = "0.0.1"
description = "Machine Learning ALgorithms Implemented From Scratch"
readme = "README.md"
authors = ["berkaytrhn berkaytrhn@gmail.com"]
license = "MIT"
keywords = ["machine learning", "scratch implementation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]



[tool.poetry.urls]
"Source" = "https://github.com/berkaytrhn/ml-from-scratch"



[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.poetry.dependencies]
python = "^3.11.8"
colorama = "0.4.6"
joblib = "1.4.2"
numpy = "2.1.3"
scikit-learn = "1.5.2"
scipy = "1.14.1"
threadpoolctl = "3.5.0"
tqdm = "4.67.1"