[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_from_scratch"
version = "0.0.1"
description = "Machine Learning Algorithms Implemented From Scratch"
readme = "README.md"
authors = [
  { name = "berkaytrhn", email = "berkaytrhn@gmail.com" }
]
license = { text = "MIT" }
keywords = ["machine learning", "scratch implementation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "colorama=0.4.6",
  "contourpy=1.3.1",
  "cycler=0.12.1",
  "fonttools=4.55.3",
  "joblib=1.4.2",
  "kiwisolver=1.4.8",
  "matplotlib=3.10.0",
  "numpy=2.2.0",
  "packaging=24.2",
  "pillow=11.1.0",
  "pyparsing=3.2.1",
  "python-dateutil=2.9.0.post0",
  "scikit-learn=1.6.0",
  "scipy=1.14.1",
  "six=1.17.0",
  "threadpoolctl=3.5.0",
  "tqdm=4.67.1"
]

[project.urls]
"Source" = "https://github.com/berkaytrhn/ml-from-scratch"